--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/Users/Fiona/Documents/workspace/Project/lib/mysql-connector-java-5.1.28-bin.jar"/>
 	<classpathentry kind="lib" path="/Users/Fiona/Documents/workspace/Project/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Fiona/Documents/workspace/Project/lib/lucene-4.6.1/analysis/common/lucene-analyzers-common-4.6.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Fiona/Documents/workspace/Project/lib/lucene-4.6.1/core/lucene-core-4.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
