Untested database and system methods for thesaurus. Created test suit for major classes.

--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="/Users/Fiona/Documents/workspace/Project/lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/Users/Fiona/Documents/workspace/Project/lib/lucene-4.6.1/analysis/common/lucene-analyzers-common-4.6.1.jar"/>
 	<classpathentry kind="lib" path="/Users/Fiona/Documents/workspace/Project/lib/lucene-4.6.1/core/lucene-core-4.6.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
