--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Fiona/Documents/workspace/Project/lib/mysql-connector-java-5.1.28-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Fiona/Documents/workspace/Project/lib/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Fiona/Documents/workspace/Project/lib/lucene-analyzers-common-4.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Fiona/Documents/workspace/Project/lib/lucene-core-4.6.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Fiona/Documents/workspace/Project/lib/mysql-connector-java-5.1.28-bin.jar"/>
+	<classpathentry kind="lib" path="/Users/Fiona/Documents/workspace/Project/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Fiona/Documents/workspace/Project/lib/lucene-analyzers-common-4.6.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Fiona/Documents/workspace/Project/lib/lucene-core-4.6.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
